NATTQA-ENV/force-app/main/default/objects/SBQQ__SubscriptionConsumptionRate__c/fields/SBQQ__Price__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Price__c</fullName>
    <inlineHelpText>The price for usage that falls within this consumption rate&apos;s bounds.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>