NATTQA-ENV/force-app/main/default/objects/SBQQ__SubscriptionConsumptionRate__c/fields/SBQQ__SubscriptionConsumptionSchedule__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionConsumptionSchedule__c</fullName>
    <inlineHelpText>This rate is a part of of this schedule.</inlineHelpText>
    <label>Subscription Consumption Schedule</label>
    <referenceTo>SBQQ__SubscriptionConsumptionSchedule__c</referenceTo>
    <relationshipLabel>Subscription Consumption Rates</relationshipLabel>
    <relationshipName>SubscriptionConsumptionRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>